--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -3,6 +3,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  background-image: url('blur-hospital.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* Header styles */
@@ -16,6 +19,7 @@ header h1 {
   font-size: 24px;
   margin: 0;
 }
+
 /* Navigation menu styles */
 nav {
   background-color: #005d9f;
@@ -42,6 +46,7 @@ nav ul li a {
 nav ul li a.active {
   font-weight: bold;
 }
+
 /* Content section styles */
 section {
   padding: 20px;
@@ -78,6 +83,7 @@ section h2 {
   background-color: rgb(0, 79, 128);
   transform: translateY(-2px);
 }
+
 #loginButton {
   background-color: #0059ff;
 }
@@ -102,9 +108,11 @@ section h2 {
   background-color: #e68a00;
   transform: translateY(-2px);
 }
+
 nav ul li a.active {
   text-decoration: underline;
 }
+
 .back-button {
   margin-bottom: 10px;
   background-color: #ccc;
@@ -115,6 +123,7 @@ nav ul li a.active {
   cursor: pointer;
   align-self: flex-start;
 }
+
 .back-button-container {
   margin-bottom: 10px;
 }
@@ -122,6 +131,7 @@ nav ul li a.active {
 .back-button:hover {
   background-color: maroon;
 }
+
 /* Information section styles */
 #information {
   background-color: #ffffff;
@@ -132,6 +142,7 @@ nav ul li a.active {
   margin: 0;
   line-height: 1.5;
 }
+
 /* Login form */
 form.login-form {
   display: flex;
@@ -143,8 +154,8 @@ form.login-form label {
   margin-bottom: 8px;
   font-weight: bold;
 }
-/*form login*/
 
+/* Form login */
 section.form-section {
   text-align: center;
 }
@@ -219,6 +230,7 @@ section.form-section form.login-form button:hover {
 section.form-section form.login-form button.reset-button:hover {
   background-color: #c82333;
 }
+
 .login-form {
   display: flex;
   flex-direction: column;
