--- a/src/components/UpdateAppointmentForm.css
+++ b/src/components/UpdateAppointmentForm.css
@@ -40,13 +40,19 @@
 }
 
 .form-buttons {
-
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  margin-top: 10px;
 }
 
-.reset-button,
+.update-button-container {
+  display: flex;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
 .submit-button {
   padding: 8px 16px;
   border: none;
@@ -56,13 +62,6 @@
   font-size: 14px;
   font-weight: bold;
   color: #fff;
-}
-
-.reset-button {
-  background-color: #bbb;
-}
-
-.submit-button {
   background-color: #4caf50;
 }
 
@@ -70,45 +69,18 @@
   background-color: #45a049;
 }
 
-.confirm-tick {
-  font-size: 48px;
-  color: #4caf50;
-  margin-bottom: 20px;
+.error-message {
+  color: red;
+  margin-top: 10px;
 }
 
-.back-button-container {
-  display: flex;
-  justify-content: flex-start;
-  width: 100%;
-  margin-top: 20px;
-}
-
-.back-button {
-  padding: 8px 16px;
-  border: none;
-  border-radius: 5px;
-  background-color: #bbb;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.back-button:hover {
-  background-color: #999;
-}
-.form-buttons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .success-message {
   display: flex;
   align-items: center;
   color: green;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .success-icon {
   margin-right: 5px;
 }
-
