--- a/src/components/EditComponents/Patient/UpdatePatientForm.css
+++ b/src/components/EditComponents/Patient/UpdatePatientForm.css
@@ -1,11 +1,11 @@
-.update-password-form-container {
+.update-patient-form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
 }
 
-.update-password-form {
+.update-patient-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,7 @@
   background-color: #f8f8f8;
 }
 
-.update-password-form h3 {
+.update-patient-form h3 {
   font-size: 20px;
   margin-bottom: 10px;
   color: #333;
@@ -39,60 +39,58 @@
   border-radius: 5px;
 }
 
-.form-buttons {
+.form-update-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   margin-top: 20px;
-  width: 100%;
 }
 
-.reset-button,
 .submit-button {
   padding: 8px 16px;
   border: none;
   border-radius: 5px;
+  background-color: #4caf50;
+  color: #fff;
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 14px;
   font-weight: bold;
-  color: #fff;
-}
-
-.reset-button {
-  background-color: #bbb;
-}
-
-.submit-button {
-  background-color: #4caf50;
 }
 
 .submit-button:hover {
   background-color: #45a049;
 }
 
-.confirm-tick {
-  font-size: 48px;
-  color: #4caf50;
-  margin-bottom: 20px;
-}
-
-.back-button-container {
-  display: flex;
-  justify-content: flex-start;
-  width: 100%;
-  margin-top: 20px;
-}
-
 .back-button {
+  margin-bottom: 10px;
   padding: 8px 16px;
   border: none;
   border-radius: 5px;
-  background-color: #bbb;
+  background-color: #ccc;
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 .back-button:hover {
   background-color: #999;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+.success-message {
+  display: flex;
+  align-items: center;
+  color: green;
+  margin-top: 10px;
+}
+
+.success-icon {
+  margin-right: 5px;
 }
